# c_prac

./: 2darray.c  3a.c  3b.c  3c.c  3d.c  3e.c  3g.c  3h.c  4a.c  4b.c  CMakeLists.txt  for_loop.c  main.c  nested_forloop.c  pointer.c  selectionsort.c  struct.c  swap.c  switch_statement.c  while_loop.c
