cmake_minimum_required(VERSION 3.27)
project(c_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(c_programming main.c
        switch_statement.c
        struct.c
        while_loop.c
        for_loop.c
        2darray.c
        nested_forloop.c
        3a.c
        3b.c
        3c.c
        3d.c
        3e.c
        3g.c
        3h.c
        4a.c
        4b.c
        pointer.c
        swap.c
        selectionsort.c
)
